--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -1,3 +1,3 @@
-FROM sjoerdmulder/teamcity-agent:latestsjoerdmulder/teamcity-agent:latest
+FROM sjoerdmulder/teamcity-agent:latest
 RUN curl -L https://github.com/harbur/captain/releases/download/v0.7.0/captain-`uname -s`-`uname -m` > /usr/local/bin/captain
 RUN chmod +x /usr/local/bin/captain
